--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cdfe7a0
+	base = 0763755
 	trimbase = 
 	parent = release/melodic/cyglidar_d1
-	previous = 
+	previous = cdfe7a0
