--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3731ae9
+	base = 81baaba
 	trimbase = 
 	parent = debian/melodic/cyglidar_d1
-	previous = 
+	previous = 3731ae9
